# flash-collector

./: .gitignore  README.md  electron-builder.json5  jest.config.js  package.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  unsolvable.yml
.github/workflows/: debug.yml  main.yml
demo-flash/: README.md  createProgressCache.fla  createProgressCache.swf
icon/: icon.psd
retinue/: banScript.js  createProgressCache.swf
retinue/Flash_Web_Player/: Player.html
retinue/Unity3D_Web_Player/: Player.html  README.md  UnityObject.js  iframe-app.js
retinue/update/: main.cmd
scripts/: afterbuild.js  copy.js  pack.js  publish.js
update-server/: .gitignore  Cargo.toml  config.json
update-server/src/: class.rs  main.rs  reader.rs  utils.rs
user-script/: flash-collector-script.user.js
userscript/: flash-collector-4399.user.js  flash-collector-script.user.js
