[package]
name = "update-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
cached = "0.34.0"
regex = "1.5.6"
